# vnx-keyvalue

./: CMakeLists.txt  README.md  codegen.sh  create_debian.sh  install.sh
debian/: control
include/vnx/keyvalue/: Server.h  SyncModule.h  btree_index_map.h  flat_index_map.h
interface/: CloseEntry.vni  Collection.vni  DeleteEntry.vni  Entry.vni  IndexEntry.vni  KeyValuePair.vni  ServerInfo.vni  Storage.vni  SyncInfo.vni  SyncUpdate.vni  TypeEntry.vni  shard_t.vni
modules/: Cache.vni  Cluster.vni  Server.vni  SyncModule.vni
src/: Server.cpp  SyncModule.cpp  vnx_keyvalue_get.cpp  vnx_keyvalue_server.cpp  vnx_keyvalue_sync.cpp
test/: test_btree_index_map.cpp  test_server_delete.cpp  test_server_get.cpp  test_server_store.cpp  test_server_sync.cpp
